@@ -9,6 +9,7 @@ Improved menu:
 * now you can use binary numbers on expressions
 Now some files can be expanded with Space key on file selector, like mdf, hdf or tap
 Added browser for .bas spectrum basic files
+Added ZXUno DMA emulation
 
 Some other minor bugfixes and improvements
 
